--- a/style/main.css
+++ b/style/main.css
@@ -641,6 +641,7 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 100%;
 }
 
 #fs-frm input,
